Fixes for GitHub

--- a/README.sm
+++ b/README.sm
@@ -2,7 +2,7 @@ sMark
 =====
 
 sMark is a simple markup language built for humans, it is easy to read and write,
-you can get an introduction "here"@"https:\\/\\/gSpera.github.com\\/sMark"
+you can get an introduction "here"@"https:\\/\\/gSpera.github.io\\/sMark"
 
 Installing
 ==========
